Feat: add swagger for updatebook
